# Sexy-Text-EE

./: Extension Upgraded v2.md  Folder Hierarchy + Contracts.md  Project To-Do.md  README.md  Starter Set v1.md  docker-compose.yaml  starter code files.md
editor-platform/: .env  README.md
editor-platform/apps/playground/: package.json
editor-platform/apps/playground/src/: main.tsx
editor-platform/infrastructure/: docker-compose.yml
editor-platform/infrastructure/postgres/: init.sql
editor-platform/services/editor-api/: Dockerfile  pyproject.toml
editor-platform/services/editor-api/app/: db.py  main.py  models.py  render.py  sanitize.py  schema.py
editor-platform/services/editor-api/app/core/: config.py  security.py
editor-platform/services/editor-api/app/db/: session.py
editor-platform/services/editor-api/app/graphql/: context.py  resolvers.py  schema.py  types.py
editor-platform/services/editor-api/app/models/: document.py  snippet.py
editor-platform/services/editor-api/app/services/: document_service.py  render_service.py  snippet_service.py  theme_service.py
editor-platform/services/editor-api/app/utils/: markdown.py  sanitize.py  text.py
editor-platform/web/src/: Editor.tsx  Preview.tsx  api.ts
